--- a/angular-client/templates/profile.html
+++ b/angular-client/templates/profile.html
@@ -6,6 +6,8 @@
 					<div class="profile-text">
 						<h1>{{user.username}}</h1>
 						<p>Discription</p>
+						<input type=”file” nv-file-select uploader=”uploader” options=”uploadOptions” ng-model="imageurl" />
+						<button ng-click="submit()">Submit</button>
 					</div>
 				</div>
 			</div> 
