--- a/angular-client/templates/app.html
+++ b/angular-client/templates/app.html
@@ -50,7 +50,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
          <div class="item active jumbotron">
-          <img src="images/adults-agreement-beverage-567633.jpg" alt="Random Name" style="width:100%; ">
+          <img src="https://bookboon.com/blog/wp-content/uploads/2013/05/PuzzlePiece2.jpg" alt="Random Name" style="width:100%; ">
           <div class="carousel-caption" style="top:300px;">
             <h1 style="color : #1C2833; ">Welcome to ProjectO</h1>
             <a href="#!signup"><button class="btn btn-info" data-toggle="modal" data-target="#myModal" style="font-size: 22px; color: black; border: 2px solid #555555;">GET STARTED</button></a>
@@ -59,7 +59,7 @@
 
 
         <div class="item ">
-          <img src="images/blackboard-business-chalkboard-355988.jpg" alt="Random Name" style="width:100%;">
+          <img src="https://explore.easyprojects.net/wp-content/uploads/2012/08/project-management-952x640.png" style="width:100%;">
           <div class="carousel-caption" style="top:500px;">
             <h1 style="color : #1C2833; ">More Information about</h1>
             <button class="btn btn-info" style="font-size: 22px;">about</button>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="item">
-          <img src="images/blank-business-composition-373076.jpg" alt="Random Name" style="width:100%;">
+          <img src="https://cdn.lynda.com/course/139981/139981-636190592137158288-16x9.jpg" alt="Random Name" style="width:100%;">
           <div class="carousel-caption" style="top:500px;">
             <h1 style="color : black;">Projects that can see</h1>
             <button class="btn btn-info" style="font-size: 25px;">projects</button>
@@ -94,37 +94,37 @@
       <br>
       <div class="row">
         <div class="col-xs-3">
-          <p class="text-center"><strong>Qays</strong></p><br>
+          <p class="text-center"><strong>Yussur</strong></p><br>
           <a href="#demo" data-toggle="collapse">
-            <img src="images/qays.jpg" class="img-circle person" alt="Qays" width="255" height="255">
+            <!-- <img src="images/qays.jpg" class="img-circle person" alt="Qays" width="255" height="255"> -->
           </a>
-          <div id="demo" class="collapse">
+         <!--  <div id="demo" class="collapse">
             <p> hey this is me :D </p>
             <p> hey this is me :D </p>
             <p> hey this is me :D </p>
             <p> hey this is me :D </p>
-          </div>
+          </div> -->
         </div>
         <div class="col-sm-3">
-          <p class="text-center"><strong>Abdulhameed</strong></p><br>
+          <p class="text-center"><strong>Hanan</strong></p><br>
           <a href="#demo2" data-toggle="collapse">
-            <img src="images/abdel.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+            <!-- <img src="images/abdel.jpg" class="img-circle person" alt="Random Name" width="255" height="255"> -->
           </a>
           <div id="demo2" class="collapse">
            <p> </p>
          </div>
        </div>
        <div class="col-sm-3">
-        <p class="text-center"><strong>Abdulatif</strong></p><br>
+        <p class="text-center"><strong>Lena</strong></p><br>
         <a href="#demo3" data-toggle="collapse">
-          <img src="images/abdelu.JPG" class="img-circle person" alt="Random Name" width="255" height="255">
+          <!-- <img src="images/abdelu.JPG" class="img-circle person" alt="Random Name" width="255" height="255"> -->
         </a>
         <div id="demo3" class="collapse">
          <p> </p>
        </div>
      </div>
      <div class="col-sm-3">
-      <p class="text-center"><strong>Shatha</strong></p><br>
+      <p class="text-center"><strong>Waed</strong></p><br>
       <a href="#demo4" data-toggle="collapse">
         <!-- <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255"> -->
       </a>
@@ -141,7 +141,7 @@
     
     <div class="row text-center">
       <div class="col-sm-12">
-        <div class="thumbnail" style="color: #4F5151;">
+        <div class="thumbnail" style="color: #4F5151 ;font-family:system-ui;">
           <h2><strong>ProjectO helps team members developers to manage the projects they work on. once ProjectO started, a user can create an account and login using that account.
            In the home page, the user can create links for the projects he/she works on. Each project shall have name, description and tasks. By clicking on the project link, the system shall navigate the user to the tasks page related to that project. In tasks page, the user can add the tasks which must be done to complete the project. During task creation, the user shall specify task description, status (Not initiated yet, in progress or done), its complexity and a team member who is responsible to complete that task. Each task could be updated and deleted.</strong></h2>
           <h2><strong>i don't know what to write here so i'll leave it as it is</strong></h2>
