--- a/angular-client/templates/profile.html
+++ b/angular-client/templates/profile.html
@@ -1,34 +1,37 @@
 <div ng-controller='profile'>
-		<div class="container">
-				<div class="profile">    	
-					<img align="left" class="image-lg "  src="images/blank-business-composition-373076.jpg" alt="Profile" style="" />
-					<img align="left" class="image-profile img-circle" src="images/Portrait_Placeholder.jpg" alt="Profile image example" />
-					<div class="profile-text">
-						<h1>{{user.username}}</h1>
-						<p>Discription</p>
-					</div>
-				</div>
-			</div> 
+        <div class="container">
+                <div class="profile">        
+                    <img align="left" class="image-lg "  src="images/blank-business-composition-373076.jpg" alt="Profile" style="" />
+                    <img align="left" class="image-profile img-circle" src="images/Portrait_Placeholder.jpg" alt="Profile image example" />
+                    <div class="profile-text">
+                        <h1>{{user.username}}</h1>
+                        <p>Discription</p>
+                    </div>
+                </div>
+            </div>
 
-	<div class="container text-center">    
-		<div class="row" >
-			<div class="col-sm-5 well" >
-				<div class="well">
-					<h3>Age : </h3>
-					<h3>Address : </h3>
-				</div>      
-			</div>
+    <div class="container ">    
+        <div class="row" >
+            <div class="col-sm-5 well" >
+                <div class="well">
+                    <h3>Age:{{user.age}}</h3>
+                    <h3>Address:{{user.address}}</h3>
+                </div>      
+            </div>
 
-			<div class="col-sm-7 well" >
-				<div class="well" >
-					<h2>My Projects : </h2>
-					<br>
-					<div ng-repeat='proj in user.projects'>
-					<h3>{{proj.projectName}}</h3>
-					</div>
-				</div>      
-			</div>
+            <div class="col-sm-7 well" >
+                <div class="well" >
+                    <h2>My Projects : </h2>
+                    <br>
+                    <div ng-repeat='proj in user.projects'>
+                    <h3>{{proj.projectName}}</h3>
+                    </div>
+                </div>      
+            </div>
 
-		</div>
-	</div>
+        </div>
+    </div>
+    <!-- <div>
+         <button type="button" class="btn btn-success">sendMessage</button>
+    </div> -->
 </div>
