--- a/angular-client/templates/signup.html
+++ b/angular-client/templates/signup.html
@@ -19,6 +19,14 @@
                 <input type="email" class="form-control"  ng-model="email" placeholder="Email !!" required>
               </div>
               <div class="form-group">
+                <label for="address">Address:</label>
+                <input type="text" class="form-control"  ng-model="address"  placeholder="Name Please" required>
+              </div>
+              <div class="form-group">
+                <label for="age">Age:</label>
+                <input type="text" class="form-control"  ng-model="age"  placeholder="Name Please" required>
+              </div>
+              <div class="form-group">
                 <label for="pwd">Password:</label>
                 <input type="password" class="form-control"  ng-model="password" placeholder="U C me" required>
               </div>
